--- a/styles-basics/styles.css
+++ b/styles-basics/styles.css
@@ -61,6 +61,41 @@ nav {
     opacity: 0.7;
 }
 
+#main-misc {
+    margin: 0.6rem;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#anim-div {
+    width: 5rem;
+    height: 5rem;
+    background-color: lightgreen;
+    border-radius: 0.2rem;
+}
+
+@keyframes anim-div-rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+#anim-div:hover {
+    animation: ease-in-out 1.5s anim-div-rotate infinite;
+}
+
+#anim-div:active {
+    border-radius: 50%;
+}
+
+#grid-container {
+    display: none;
+}
+
 @media screen and (min-width: 760px) {
     header {
         text-align: unset;
@@ -113,5 +148,18 @@ nav {
 
     #aside-paragraph {
         font-size: 1.1rem;
+    }
+
+    #grid-container {
+        display: grid;
+        grid-template-columns: 1fr 2fr 1fr;
+        grid-template-rows: 1fr 3fr;
+        grid-column-gap: 0.5rem;
+        grid-row-gap: 0.5rem;
+    }
+
+    #grid-container div {
+        background-color: lightgreen;
+        padding: 0.5rem;
     }
 }
