--- a/styles-basics/styles.css
+++ b/styles-basics/styles.css
@@ -63,13 +63,11 @@ nav {
 
 #main-misc {
     margin: 0.6rem;
-    display: flex;
-    justify-content: space-evenly;
 }
 
 #anim-div {
-    width: 5rem;
-    height: 5rem;
+    width: 10rem;
+    height: 10rem;
     background-color: lightgreen;
     border-radius: 0.2rem;
 }
@@ -93,7 +91,82 @@ nav {
 }
 
 #grid-container {
-    display: none;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: 1fr 3fr;
+    grid-column-gap: 0.5rem;
+    grid-row-gap: 0.5rem;
+}
+
+#grid-container div {
+    background-color: lightgreen;
+    padding: 0.5rem;
+}
+
+.button {
+    padding: 1rem 2rem;
+    font-size: 1.2rem;
+    cursor: pointer;
+    border-radius: 0.2rem;
+}
+
+.primary-button {
+    background-color: lightgreen;
+}
+
+.secondary-button {
+    background-color: white;
+    border: 0.1rem solid lightgreen;
+}
+
+.secondary-button:active {
+    background-color: lightgray;
+}
+
+#music-bars {
+    display: flex;
+    height: 2rem;
+}
+
+@keyframes music-bars {
+    0% {
+        margin-top: 0.5rem;
+        height: 1.5rem;
+    }
+
+    50% {
+        margin-top: 0;
+        height: 2rem;
+    }
+
+    100% {
+        margin-top: 0.5rem;
+        height: 1.5rem;
+    }
+}
+
+.bar {
+    border-left: 0.1rem solid black;
+    position: relative;
+    height: 2rem;
+    margin: 0 0.1rem;
+    animation: ease-in-out 800ms music-bars infinite;
+}
+
+#first-bar {
+    animation-delay: 150ms;
+}
+
+#second-bar {
+    animation-delay: 20ms;
+}
+
+#third-bar {
+    animation-delay: 350ms;
+}
+
+#fifth-bar {
+    animation-delay: 200ms;
 }
 
 @media screen and (min-width: 760px) {
@@ -150,16 +223,9 @@ nav {
         font-size: 1.1rem;
     }
 
-    #grid-container {
-        display: grid;
-        grid-template-columns: 1fr 2fr 1fr;
-        grid-template-rows: 1fr 3fr;
-        grid-column-gap: 0.5rem;
-        grid-row-gap: 0.5rem;
-    }
-
-    #grid-container div {
-        background-color: lightgreen;
-        padding: 0.5rem;
+    #main-misc {
+        margin: 0.6rem;
+        display: flex;
+        justify-content: space-evenly;
     }
 }
